--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "countries-list": "^3.0.6",
+    "date-fns": "^2.30.0",
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "npm": "^10.2.1",
